--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,8 +1,36 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  margin-bottom: 10px;
+}
+
+.search-btn {
+  margin-left: 10px;
+  background-color: green;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  padding: 10px 24px;
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: block;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 1;
+  }
+}
 .gallery {
   display: inline-flex;
   flex-wrap: wrap;
   gap: 12px;
+  justify-content: center;
   //   display: flex;
   //   flex-wrap: wrap;
   //   align-items: center;
@@ -27,10 +55,10 @@
 
 .load-more {
   background-color: green;
-  border-radius: 5px;
+  border-radius: 12px;
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding: 12px 26px;
   text-align: center;
   font-size: 16px;
   margin-left: auto;
@@ -43,5 +71,8 @@
 
   &:hover {
     opacity: 1;
+  }
+  &.is-hidden {
+    display: none;
   }
 }
